--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.21.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
